# trade

./: .gitignore  APP_SETUP.md  BTCUSDT-1h-2025-06.csv  BTCUSDT_d.csv  Bitstamp_ETHUSD_d.csv  ENHANCED_GUIDE.md  ENHANCED_SETUP.md  FINAL_REPORT.md  PROJECT_SUMMARY.md  README.md  TRADING_APP_GUIDE.md  USAGE_GUIDE.md  app.py  app_demo.py  bayesian_optimizer.py  comprehensive_backtest.py  debug_csv.py  debug_strategy.py  enhanced_framework.py  enhanced_strategies.py  enhanced_strategies_simple.py  main.py  ml-trading.service  monitor.sh  multi_asset_tester.py  optimizer_ml.py  optimizer_simple.py  optimizer_simple_v2.py  pyproject.toml  requirements.txt  requirements_enhanced.txt  strategies.py  strategy_manager.py  test_enhanced_strategies.py  test_simple_enhanced.py  trading_config.json  walk_forward_optimizer.py
app/: README.md  __init__.py  config.yaml  main.py
app/backtest/: metrics.py  simulator.py
app/data/: polygon_flatfiles_downloader.py  polygon_loader.py
app/execution/: gateway.py  trade_manager.py
app/features/: engineer.py
app/labels/: targets.py
app/models/: classifier.py
app/orchestration/: scheduler.py
app/tests/: test_integration.py
app/utils/: costs.py  seed.py  splits.py
docs/: architecture.md
projects/: __init__.py
projects/ml-trading/: README.md  __init__.py  config.yaml  main.py
projects/ml-trading/src/: __init__.py
projects/ml-trading/src/backtest/: metrics.py  simulator.py
projects/ml-trading/src/data/: polygon_loader.py
projects/ml-trading/src/execution/: trade_manager.py
projects/ml-trading/src/labels/: __init__.py  targets.py
projects/strategy-backtester/: README.md  run_strategy.py
projects/strategy-backtester/src/: __init__.py  backtester.py  best_strategy.py  comprehensive_comparison.py  comprehensive_enhanced_backtest.py  final_analysis.py  performance_dashboard.py  practical_backtest.py  simple_enhanced_strategies.py  trend_mean_reversion_strategy.py
scripts/: monitor.sh  setup.sh
shared/: __init__.py  data_utils.py  trading_utils.py
shared/config/: exchanges.yaml
(+6 files in other folders)
